--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 name: "Tony's Blog"
 description: "My personal things"
-
-url: "http://localhost:4000"
-
+url: "lvtiendev.github.io"
 paginate: 1
-
 markdown: rdiscount
 permalink: pretty
 pygments: true
