--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: "Tony's Blog"
+name: "Viet Tien's Blog"
 description: "Le Viet Tien's CS3216 blog"
 url: "http://lvtiendev.github.io"
 paginate: 5
